src/test/run-pass/long-while.rs


fn main() { let int i = 0; while (i < 1000000) { i += 1; auto x = 3; } }